--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CV JOSER BLANCO GOMEZ</title>
+        
+        <link rel="shortcut icon" href="cv.png" /> <title>CV JOSER BLANCO GOMEZ</title>
         <link rel="stylesheet" href="style.css">
         
     </head>
@@ -81,7 +82,7 @@
                     HABILIDADES
                 </h2>
                 <ul>
-                    <li>HTML</li>
+                    <li> HTML</li> 
                     <li>CSS</li>
                     <li>Javascript</li>
                     <li>Git</li>
